Demonstrate Jackson exploit via Xalan TemplatesImpl